# Equivarx

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: feature-in-progress.md
.github/workflows/: build.yml
crates/eqx_app/: Cargo.toml
crates/eqx_app/src/: app.rs  lib.rs  module.rs  prelude.rs
crates/eqx_core/: Cargo.toml
crates/eqx_core/src/: lib.rs  util_macros.rs
crates/eqx_prelude/: Cargo.toml
crates/eqx_prelude/src/: lib.rs  prelude.rs
crates/eqx_render/: Cargo.toml
crates/eqx_window/: Cargo.toml
crates/eqx_window/src/: lib.rs  primitives.rs  texture.rs  window.rs
eqx-app/: Cargo.toml
eqx-core/: Cargo.toml
eqx-gui/: Cargo.toml
eqx-render/: Cargo.toml
eqx_examples/hello_cube/: Cargo.toml
examples/hello_cube/: Cargo.toml
examples/hello_cube/src/: main.rs
shaders/trig/: shader.wgsl
src/: lib.rs
src/renderer/: core.rs
