[package]
name = "eqx_window"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.22", features = ["derive"] }
eqx_core = { path = "../eqx_core", version = "0.1.0" }
cgmath = "0.18"
eqx_app = { path = "../eqx_app", version = "0.1.0" }
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
pollster = "0.2"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "24.0"
